// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rule 1`] = `
Object {
  "Button": "Button-hash m-when-hash-1 m-background-hash-1 m-CustomName-hash-1",
}
`;

exports[`rule 2`] = `
Array [
  Array [
    Array [
      Object {
        "media": null,
        "mixins": Array [
          [Function],
          [Function],
          [Function],
        ],
        "root": Array [
          "Button",
        ],
        "selector": Array [
          ".Button-hash .A-hash .B-hash:active .C-hash .D-hash .E-hash:hover",
          ".Button-hash .A-hash .B1-hash .C-hash .D-hash .E-hash:hover",
          ".Button-hash .A-hash .B2-hash .C-hash .D-hash .E-hash:hover",
          ".Button-hash .A-hash .B3-hash .C-hash .D-hash .E-hash:hover",
        ],
        "styles": Object {
          "color": "green",
        },
      },
      Object {
        "media": null,
        "mixins": Array [],
        "root": Array [
          "Button",
        ],
        "selector": Array [
          ".Button-hash",
        ],
        "styles": Object {
          "color": "red",
        },
      },
    ],
  ],
  Array [
    Array [
      Object {
        "selector": Array [
          ".m-when-hash-1.Button-hash .A-hash .B-hash:active .C-hash .D-hash .E-hash:hover",
          ".m-when-hash-1.Button-hash .A-hash .B1-hash .C-hash .D-hash .E-hash:hover",
          ".m-when-hash-1.Button-hash .A-hash .B2-hash .C-hash .D-hash .E-hash:hover",
          ".m-when-hash-1.Button-hash .A-hash .B3-hash .C-hash .D-hash .E-hash:hover",
        ],
        "styles": Object {
          "color": "red",
        },
      },
      Object {
        "selector": Array [
          ".m-background-hash-1.Button-hash .A-hash .B-hash:active .C-hash .D-hash .E-hash:hover",
          ".m-background-hash-1.Button-hash .A-hash .B1-hash .C-hash .D-hash .E-hash:hover",
          ".m-background-hash-1.Button-hash .A-hash .B2-hash .C-hash .D-hash .E-hash:hover",
          ".m-background-hash-1.Button-hash .A-hash .B3-hash .C-hash .D-hash .E-hash:hover",
        ],
        "styles": Object {
          "background": "yellow",
        },
      },
      Object {
        "selector": Array [
          ".m-CustomName-hash-1.Button-hash .A-hash .B-hash:active .C-hash .D-hash .E-hash:hover",
          ".m-CustomName-hash-1.Button-hash .A-hash .B1-hash .C-hash .D-hash .E-hash:hover",
          ".m-CustomName-hash-1.Button-hash .A-hash .B2-hash .C-hash .D-hash .E-hash:hover",
          ".m-CustomName-hash-1.Button-hash .A-hash .B3-hash .C-hash .D-hash .E-hash:hover",
        ],
        "styles": Object {
          "font-size": "20px",
        },
      },
    ],
  ],
]
`;

exports[`rule 3`] = `
Object {
  "Button": "Button-hash m-background-hash-2",
}
`;

exports[`rule 4`] = `
Array [
  Array [
    Array [
      Object {
        "media": null,
        "mixins": Array [
          [Function],
          [Function],
          [Function],
        ],
        "root": Array [
          "Button",
        ],
        "selector": Array [
          ".Button-hash .A-hash .B-hash:active .C-hash .D-hash .E-hash:hover",
          ".Button-hash .A-hash .B1-hash .C-hash .D-hash .E-hash:hover",
          ".Button-hash .A-hash .B2-hash .C-hash .D-hash .E-hash:hover",
          ".Button-hash .A-hash .B3-hash .C-hash .D-hash .E-hash:hover",
        ],
        "styles": Object {
          "color": "green",
        },
      },
      Object {
        "media": null,
        "mixins": Array [],
        "root": Array [
          "Button",
        ],
        "selector": Array [
          ".Button-hash",
        ],
        "styles": Object {
          "color": "red",
        },
      },
    ],
  ],
  Array [
    Array [
      Object {
        "selector": Array [
          ".m-when-hash-1.Button-hash .A-hash .B-hash:active .C-hash .D-hash .E-hash:hover",
          ".m-when-hash-1.Button-hash .A-hash .B1-hash .C-hash .D-hash .E-hash:hover",
          ".m-when-hash-1.Button-hash .A-hash .B2-hash .C-hash .D-hash .E-hash:hover",
          ".m-when-hash-1.Button-hash .A-hash .B3-hash .C-hash .D-hash .E-hash:hover",
        ],
        "styles": Object {
          "color": "red",
        },
      },
      Object {
        "selector": Array [
          ".m-background-hash-1.Button-hash .A-hash .B-hash:active .C-hash .D-hash .E-hash:hover",
          ".m-background-hash-1.Button-hash .A-hash .B1-hash .C-hash .D-hash .E-hash:hover",
          ".m-background-hash-1.Button-hash .A-hash .B2-hash .C-hash .D-hash .E-hash:hover",
          ".m-background-hash-1.Button-hash .A-hash .B3-hash .C-hash .D-hash .E-hash:hover",
        ],
        "styles": Object {
          "background": "yellow",
        },
      },
      Object {
        "selector": Array [
          ".m-CustomName-hash-1.Button-hash .A-hash .B-hash:active .C-hash .D-hash .E-hash:hover",
          ".m-CustomName-hash-1.Button-hash .A-hash .B1-hash .C-hash .D-hash .E-hash:hover",
          ".m-CustomName-hash-1.Button-hash .A-hash .B2-hash .C-hash .D-hash .E-hash:hover",
          ".m-CustomName-hash-1.Button-hash .A-hash .B3-hash .C-hash .D-hash .E-hash:hover",
        ],
        "styles": Object {
          "font-size": "20px",
        },
      },
    ],
  ],
  Array [
    Array [
      Object {
        "selector": Array [
          ".m-background-hash-2.Button-hash .A-hash .B-hash:active .C-hash .D-hash .E-hash:hover",
          ".m-background-hash-2.Button-hash .A-hash .B1-hash .C-hash .D-hash .E-hash:hover",
          ".m-background-hash-2.Button-hash .A-hash .B2-hash .C-hash .D-hash .E-hash:hover",
          ".m-background-hash-2.Button-hash .A-hash .B3-hash .C-hash .D-hash .E-hash:hover",
        ],
        "styles": Object {
          "background": "green",
        },
      },
    ],
  ],
]
`;
